--- a/hepo_dakar-next-js/package.json
+++ b/hepo_dakar-next-js/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.6",
     "@portabletext/react": "^3.1.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-sanity": "^9.4.2",
