--- a/hepo_dakar-next-js/package.json
+++ b/hepo_dakar-next-js/package.json
@@ -13,6 +13,7 @@
     "@portabletext/react": "^3.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-sanity": "^9.4.2",
