--- a/hepo_dakar-next-js/package.json
+++ b/hepo_dakar-next-js/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@portabletext/react": "^3.1.0",
     "bootstrap": "^5.3.3",
@@ -17,12 +18,16 @@
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-sanity": "^9.4.2",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
