--- a/hepo_dakar-next-js/package.json
+++ b/hepo_dakar-next-js/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-phone-input-2": "^2.15.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
